bp: Use Cluster State to Track Repository Generation
https://github.com/elastic/elasticsearch/commit/b34daeb64b7efd601993a7e46eea08834596a43f